# ansible-universe-unix

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pymarkdown.yml  .yamllint.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTORS.rst  LICENSE.rst  README.md  galaxy.yaml  galaxy.yml  pyproject.toml
changelogs/: .gitignore  changelog.yaml  config.yaml
changelogs/fragments/: podman_install-new-role.yml  role-new-package_install_core.yaml  role-new-package_install_hwutils.yaml  role-new-package_install_netutils.yaml  role-new-package_install_utils.yaml  systemd_unit-new-role.yml
meta/: runtime.yaml  runtime.yml
playbooks/: podman_install.yml
roles/ansible_install/: README.md
roles/ansible_install/meta/: main.yml
roles/ansible_install/vars/: main.yml
roles/ansible_user/: README.md
roles/ansible_user/defaults/: main.yml
roles/ansible_user/meta/: main.yml
roles/ansible_user/tasks/: main.yml
roles/ansible_user/templates/: sudoers.j2
roles/ansible_user/vars/: main.yml
roles/apt_package_install/: README.md  README.rst
roles/apt_package_install/defaults/: main.yaml  main.yml
roles/apt_package_install/handlers/: main.yaml  main.yml
roles/apt_package_install/meta/: main.yaml  main.yml
roles/apt_package_install/tasks/: main.yaml  main.yml
roles/dirs/: README.md
roles/dirs/defaults/: main.yml
roles/dirs/meta/: main.yml
roles/dirs/vars/: main.yml
roles/dnf_epel_install/: README.md  README.rst
roles/dnf_epel_install/meta/: main.yml
roles/dnf_epel_install/tasks/: main.yml
roles/dnf_epel_install/vars/: main.yml
roles/dnf_package_install/: README.md  README.rst
roles/dnf_package_install/defaults/: main.yaml  main.yml
roles/dnf_package_install/handlers/: main.yaml  main.yml
roles/dnf_package_install/meta/: main.yaml  main.yml
roles/generic_package_install/: README.md  README.rst
roles/gpg_import/: README.md  README.rst
roles/gpg_install/: README.md  README.rst
roles/package_install/: README.md  README.rst
roles/package_install_core/: README.md
roles/package_install_hwutils/: README.md
roles/package_install_netutils/: README.md
roles/package_install_utils/: README.md
roles/podman_install/: README.md
roles/root_disable/: README.md  README.rst
roles/ssh_authorized_key/: README.md  README.rst
roles/sudo_exec/: README.md  README.rst
roles/sudo_install/: README.md  README.rst
roles/systemd_handler/: README.md
roles/systemd_unit/: README.md
roles/timezone/: README.md  README.rst
(+51 files in other folders)
