# pyproject.toml
# ==============
#
# Copying
# -------
#
# Copyright (c) 2022 universe.unix authors and contributors.
#
# This file is part of the *universe.unix* project.
#
# *universe.unix* is a free software project. You can redistribute it and/or
# modify it following the terms of the MIT License.
#
# This software project is distributed *as is*, WITHOUT WARRANTY OF ANY KIND;
# including but not limited to the WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
# PARTICULAR PURPOSE and NONINFRINGEMENT.
#
# You should have received a copy of the MIT License along with
# *universe.unix*. If not, see <http://opensource.org/licenses/MIT>.
#
[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []
atomic = true
combine_as_imports = true
combine_star = true
include_trailing_comma = true
length_sort = true
line_length = 80
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
order_by_type = true
use_parentheses = true

[tool.poetry]
name = "ansible-universe-unix"
version = "0.1.0-alpha.1"
authors = ["See AUTHORS.rst"]
maintainers = [
    "Jimmy Thrasibule <dev@jimmy.lt>",
]
description = "A general purpose set of Ansible modules."
license = "MIT"
readme = "README.md"
repository = "https://github.com/x237net/ansible-universe-common"
keywords = [
    "ansible",
    "collection",
    "tools",
    "unix",
]
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers.
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Ansible",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
include = [
    "AUTHORS.md",
    "CONTRIBUTORS.rst",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
ansible = "^8.5.0"
antsibull-changelog = {extras = ["toml"], version = "^0.23.0"}

[tool.poetry.group.lint.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
pymarkdown = "^0.1.0"
yamllint = "^1.32.0"
